[package]
name = "shogun-rust"
version = "0.1.0"
authors = ["gf712 <gil_f.hoben@hotmail.com>"]
edition = "2018"

[dependencies]
shogun-rust-procedural = {verion = "0.1.0", path = "lib-procedural"}

[lib]
name = "shogun_rust"
path = "src/lib.rs"

[[bin]]
name = "shogun"
path = "src/bin/main.rs"

[build-dependencies]
bindgen = "0.54.0"
cmake = "0.1.44"